--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+body {
+    margin: 1em;
+    padding: 1em;
+}
+
+h3,p {
+    font-family: sans-serif;
+}
