--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <h3>ngfx - a currency converter</h3>
 
+<p>Converting from {{from}} to {{to}}</p>
 <p>Current Exchange Rate = {{ currentRate }}</p>
 <mat-form-field>
     <mat-label>
